--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,8 @@ spring:
     name: sharezone
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#    url: jdbc:sqlserver://;serverName=syntaxerrorjars-example.database.windows.net;databaseName=SyntaxErrorJarsDB;encrypt=true
-    url: jdbc:sqlserver://sharezone.database.windows.net:1433;database=sharezonedb;user=sharezone@sharezone;password=Socialmedia2022;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    url: jdbc:sqlserver://;serverName=sharezone.database.windows.net;databaseName=sharezonedb;encrypt=true
+#    url: jdbc:sqlserver://sharezone.database.windows.net:1433;database=sharezonedb;user=sharezone@sharezone;password=Socialmedia2022;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
     username: sharezone
     password: Socialmedia2022
   jpa:
