--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -48,44 +60,54 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
-                <plugin>
-                    <groupId>com.microsoft.azure</groupId>
-                    <artifactId>azure-webapp-maven-plugin</artifactId>
-                    <version>2.2.0</version>
-                    <configuration>
-                        <!-- Specify v2 schema -->
-                        <schemaVersion>v2</schemaVersion>
-                        <!-- App information -->
-                        <!-- SUBSCRIPTION_ID Unique ID for the subscription that deploys the app-->
-                        <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>
-                        <!-- RESOURCEGROUP_NAME -->
-                        <resourceGroup>SQLDatabase</resourceGroup>
-                        <!-- WEBAPP_NAME -->
-                        <appName>sharezone</appName>
-                        <!-- REGION -->
-                        <region>East US</region>
-                        <!-- Java Runtime Stack for App Service on Windows -->
-                        <runtime>
-                            <os>windows</os>
-                            <javaVersion>1.8</javaVersion>
-                            <webContainer>tomcat 9.0</webContainer>
-                        </runtime>
-                        <deployment>
-                            <resources>
-                                <resource>
-                                    <directory>${project.basedir}/target</directory>
-                                    <includes>
-                                        <include>*.war</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </deployment>
-                        <!--          DO NOT REMOVE THE PRICING TIER ITS THE CHEAPEST-->
-                        <pricingTier>F1</pricingTier>
-                    </configuration>
-                </plugin>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version>2.2.0</version>
+                <configuration>
+                    <!-- Specify v2 schema -->
+                    <schemaVersion>v2</schemaVersion>
+                    <!-- App information -->
+                    <!-- SUBSCRIPTION_ID Unique ID for the subscription that deploys the app-->
+                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>
+                    <!-- RESOURCEGROUP_NAME -->
+                    <resourceGroup>SQLDatabase</resourceGroup>
+                    <!-- WEBAPP_NAME -->
+                    <appName>sharezone</appName>
+                    <!-- REGION -->
+                    <region>East US</region>
+                    <!-- Java Runtime Stack for App Service on Windows -->
+                    <runtime>
+                        <os>windows</os>
+                        <javaVersion>1.8</javaVersion>
+                        <webContainer>tomcat 9.0</webContainer>
+                    </runtime>
+                    <deployment>
+                        <resources>
+                            <resource>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.war</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
+                    <!--          DO NOT REMOVE THE PRICING TIER ITS THE CHEAPEST-->
+                    <pricingTier>F1</pricingTier>
+                </configuration>
+            </plugin>
+
+
 
         </plugins>
     </build>
