--- a/pom.xml
+++ b/pom.xml
@@ -70,42 +70,42 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>2.2.0</version>
-                <configuration>
-                    <!-- Specify v2 schema -->
-                    <schemaVersion>v2</schemaVersion>
-                    <!-- App information -->
-                    <!-- SUBSCRIPTION_ID Unique ID for the subscription that deploys the app-->
-                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>
-                    <!-- RESOURCEGROUP_NAME -->
-                    <resourceGroup>SQLDatabase</resourceGroup>
-                    <!-- WEBAPP_NAME -->
-                    <appName>sharezone</appName>
-                    <!-- REGION -->
-                    <region>East US</region>
-                    <!-- Java Runtime Stack for App Service on Windows -->
-                    <runtime>
-                        <os>windows</os>
-                        <javaVersion>1.8</javaVersion>
-                        <webContainer>tomcat 9.0</webContainer>
-                    </runtime>
-                    <deployment>
-                        <resources>
-                            <resource>
-                                <directory>${project.basedir}/target</directory>
-                                <includes>
-                                    <include>*.war</include>
-                                </includes>
-                            </resource>
-                        </resources>
-                    </deployment>
-                    <!--          DO NOT REMOVE THE PRICING TIER ITS THE CHEAPEST-->
-                    <pricingTier>F1</pricingTier>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.microsoft.azure</groupId>-->
+<!--                <artifactId>azure-webapp-maven-plugin</artifactId>-->
+<!--                <version>2.2.0</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; Specify v2 schema &ndash;&gt;-->
+<!--                    <schemaVersion>v2</schemaVersion>-->
+<!--                    &lt;!&ndash; App information &ndash;&gt;-->
+<!--                    &lt;!&ndash; SUBSCRIPTION_ID Unique ID for the subscription that deploys the app&ndash;&gt;-->
+<!--                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>-->
+<!--                    &lt;!&ndash; RESOURCEGROUP_NAME &ndash;&gt;-->
+<!--                    <resourceGroup>SQLDatabase</resourceGroup>-->
+<!--                    &lt;!&ndash; WEBAPP_NAME &ndash;&gt;-->
+<!--                    <appName>sharezone</appName>-->
+<!--                    &lt;!&ndash; REGION &ndash;&gt;-->
+<!--                    <region>East US</region>-->
+<!--                    &lt;!&ndash; Java Runtime Stack for App Service on Windows &ndash;&gt;-->
+<!--                    <runtime>-->
+<!--                        <os>windows</os>-->
+<!--                        <javaVersion>1.8</javaVersion>-->
+<!--                        <webContainer>tomcat 9.0</webContainer>-->
+<!--                    </runtime>-->
+<!--                    <deployment>-->
+<!--                        <resources>-->
+<!--                            <resource>-->
+<!--                                <directory>${project.basedir}/target</directory>-->
+<!--                                <includes>-->
+<!--                                    <include>*.war</include>-->
+<!--                                </includes>-->
+<!--                            </resource>-->
+<!--                        </resources>-->
+<!--                    </deployment>-->
+<!--                    &lt;!&ndash;          DO NOT REMOVE THE PRICING TIER ITS THE CHEAPEST&ndash;&gt;-->
+<!--                    <pricingTier>F1</pricingTier>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
 
 
