--- a/pom.xml
+++ b/pom.xml
@@ -69,45 +69,34 @@
                     </excludes>
                 </configuration>
             </plugin>
-
-<!--            <plugin>-->
-<!--                <groupId>com.microsoft.azure</groupId>-->
-<!--                <artifactId>azure-webapp-maven-plugin</artifactId>-->
-<!--                <version>2.2.0</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash; Specify v2 schema &ndash;&gt;-->
-<!--                    <schemaVersion>v2</schemaVersion>-->
-<!--                    &lt;!&ndash; App information &ndash;&gt;-->
-<!--                    &lt;!&ndash; SUBSCRIPTION_ID Unique ID for the subscription that deploys the app&ndash;&gt;-->
-<!--                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>-->
-<!--                    &lt;!&ndash; RESOURCEGROUP_NAME &ndash;&gt;-->
-<!--                    <resourceGroup>SQLDatabase</resourceGroup>-->
-<!--                    &lt;!&ndash; WEBAPP_NAME &ndash;&gt;-->
-<!--                    <appName>sharezone</appName>-->
-<!--                    &lt;!&ndash; REGION &ndash;&gt;-->
-<!--                    <region>East US</region>-->
-<!--                    &lt;!&ndash; Java Runtime Stack for App Service on Windows &ndash;&gt;-->
-<!--                    <runtime>-->
-<!--                        <os>windows</os>-->
-<!--                        <javaVersion>1.8</javaVersion>-->
-<!--                        <webContainer>tomcat 9.0</webContainer>-->
-<!--                    </runtime>-->
-<!--                    <deployment>-->
-<!--                        <resources>-->
-<!--                            <resource>-->
-<!--                                <directory>${project.basedir}/target</directory>-->
-<!--                                <includes>-->
-<!--                                    <include>*.war</include>-->
-<!--                                </includes>-->
-<!--                            </resource>-->
-<!--                        </resources>-->
-<!--                    </deployment>-->
-<!--                    &lt;!&ndash;          DO NOT REMOVE THE PRICING TIER ITS THE CHEAPEST&ndash;&gt;-->
-<!--                    <pricingTier>F1</pricingTier>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
-
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version>1.8.0</version>
+                <configuration>
+                    <schemaVersion>V2</schemaVersion>
+                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>
+                    <resourceGroup>SQLDatabase</resourceGroup>
+                    <appName>sharezone</appName>
+                    <region>East US</region>
+                    <pricingTier>F1</pricingTier>
+                    <runtime>
+                        <os>windows</os>
+                        <javaVersion>1.8</javaVersion>
+                        <webContainer>tomcat 9.0</webContainer>
+                    </runtime>
+                    <deployment>
+                        <resources>
+                            <resource>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.jar</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
