--- a/.github/workflows/main_sharezone.yml
+++ b/.github/workflows/main_sharezone.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'sharezone'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9688E24598FC44CAB2DCFBC9D026E58B }}
-          package: '*.war'
+          package: '*.jar'
