--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
@@ -69,34 +81,34 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>1.8.0</version>
-                <configuration>
-                    <schemaVersion>V2</schemaVersion>
-                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>
-                    <resourceGroup>SQLDatabase</resourceGroup>
-                    <appName>sharezone</appName>
-                    <region>East US</region>
-                    <pricingTier>F1</pricingTier>
-                    <runtime>
-                        <os>windows</os>
-                        <javaVersion>1.8</javaVersion>
-                        <webContainer>tomcat 9.0</webContainer>
-                    </runtime>
-                    <deployment>
-                        <resources>
-                            <resource>
-                                <directory>${project.basedir}/target</directory>
-                                <includes>
-                                    <include>*.jar</include>
-                                </includes>
-                            </resource>
-                        </resources>
-                    </deployment>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.microsoft.azure</groupId>-->
+<!--                <artifactId>azure-webapp-maven-plugin</artifactId>-->
+<!--                <version>1.8.0</version>-->
+<!--                <configuration>-->
+<!--                    <schemaVersion>V2</schemaVersion>-->
+<!--                    <subscriptionId>9cc4b7e1-da29-4fd8-8ac8-1e56252688f4</subscriptionId>-->
+<!--                    <resourceGroup>SQLDatabase</resourceGroup>-->
+<!--                    <appName>sharezone</appName>-->
+<!--                    <region>East US</region>-->
+<!--                    <pricingTier>F1</pricingTier>-->
+<!--                    <runtime>-->
+<!--                        <os>windows</os>-->
+<!--                        <javaVersion>1.8</javaVersion>-->
+<!--                        <webContainer>tomcat 9.0</webContainer>-->
+<!--                    </runtime>-->
+<!--                    <deployment>-->
+<!--                        <resources>-->
+<!--                            <resource>-->
+<!--                                <directory>${project.basedir}/target</directory>-->
+<!--                                <includes>-->
+<!--                                    <include>*.jar</include>-->
+<!--                                </includes>-->
+<!--                            </resource>-->
+<!--                        </resources>-->
+<!--                    </deployment>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
         </plugins>
     </build>
