--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+
+            <!-- Charles said we don't use this plugin for this project -->
 <!--            <plugin>-->
 <!--                <groupId>com.microsoft.azure</groupId>-->
 <!--                <artifactId>azure-webapp-maven-plugin</artifactId>-->
